style.css
/* .results-container{
  height: 500px;
 width: 500px;  

  border: 3px solid black;
  flex-direction: column;
  align-items: center;
  justify-content: center;

}

span{
font-size: 50px; 
}



div{
  flex-direction: column;
  align-items: center;
 justify-content: space-between;
 border: 3px solid yellow;
 width: max-content;
}

img{
  width: 500px;
  height: 300px;
  align-items: center;
}


p{
  color: navy;
  align-items: center;
}
li{
  list-style-type: none;
  align-items: center;
} */

header{
  background-color:#FACD3D;
  width: 1021004px;
text-align: center;
animation: pulse 5s infinite;
}


p
{
  display: inline;
  font-size: 20px;
}



* {box-sizing:border-box}

/* Slideshow container */
.slideshow-container {
  display: flex;
  flex-direction: column;
  align-content: center;
  justify-content: center;
  height: 100%;
  width: 600px; 
 /* position: absolute;  */
  margin-top: 30px;
  background-color: rgb(250, 205, 61, 0.5);
  /* border: 2px solid black; */
}

img{
  width: 100%;
  height: 400px;
  align-self: center;
}

/* Hide the images by default */
.mySlides {
  display: none;
}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: red;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}
.prev {
  left: 0;
  border-radius: 3px 0 0 3px;
}
.buttons{
  display: flex;
  /* flex-direction: row;
  align-items: center;
  justify-content: space-between; */
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
}

/* Caption text */
.text {
  color: #5626C4;
  font-size: 15px;
  /* padding: 8px 12px;
  position: absolute; */
  /* bottom: 8px; */
  width: 100%;
  text-align: center;
  background-color: rgba(115, 106, 241, 0.4);
}



.title {
  color: #5626C4;
  font-size: 15px;
  /* padding: 8px 12px;
  position: absolute; */
  /* top: 100px;
  width: 100%; */
  text-align: center;
  background-color: rgba(115, 106, 241, 0.4);
}


.trending{
  padding-top: 30px;
  height: 400px;
  width: 100%;
  background-color: rgb(44, 204, 195, 0.6);
  text-align: center;
  color: #FACD3D;
  font-size: 50px;
}

/* Number text (1/3 etc) */
.numbertext {
  color: rgba(115, 106, 241);
  font-size: 12px;
  /* padding: 8px 12px; */
  /* position: absolute; */
  top: 0;
}


/* The dots/bullets/indicators */
.dot {
  display: inline; 

  cursor: pointer;
  height: 20px;
  width: 20px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;

  transition: background-color 0.6s ease;
}
.allDots {
  
  display: flex;
  flex-direction: row;
  cursor: pointer;
  justify-content: center;
  text-align: center;
  
}

.active, .dot:hover {
  background-color: #5626C4;
}

/* Fading animation */
.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}

@-webkit-keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}


body{
  font-family: 'Fjalla One', sans-serif;
  background-color: lightgray;
  display: flex;
  flex-direction: column;
  align-items: center; 
  justify-content: center;
  margin: 0 auto;
}

h1{
  
  color: #5626C4;
}
h2{
  color: #2CCCC3;
  align-items: center;
  text-align: center;
}

input {
  padding: 15px;
  margin:5px;
}


button {
  text-transform: capitalize;
  border: 1px solid Grey;
  background-color: #FACD3D;
  padding: 15px;
}
form{
  padding-bottom:30px;
  
}

@keyframes pulse {
  0% {
    background-color: #FACD3D;
  }
  100% {
    background-color: rgb(255, 145, 0);
  }
}

.trendingAlign>div>div{
  display:inline;
}
.trending > div > div>img{
  height: 150px;
  width: 150px;
  margin: 10px;
 
}
.trendAlign>.trendImage > div {
  height: 250px;
  width: 250px;
}


.trending > div > div{
  
  display: inline;
  text-align: center;

}

